# logo-detection-trainer

./: README.md  SUMMARY.md  TRAINING_GUIDE.md  main.py  pyproject.toml  test_model_download.py
configs/: base_training.yaml  fine_tune.yaml
src/: trainer.py
